--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                width: 80%;
                margin: 1rem;
                padding: 1rem;
-
+               color: white;
           }
      </Style>
 
