--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
                margin: 1rem;
                padding: 1rem;
                border: 1px solid black;
-               
+               background: transparent;
+               color:white;
 
           }
 
