--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
 </head>
 
-<Body background="image/STARWARS.jpg">
+<Body background="image/STARWARS.jpg" style="width:100%;">
      
      <nav class="navigation container">
           <div class="nav-brand">STAR WARS 🚀</div>
