--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
                border: 1px solid black;
                background: transparent;
                color:white;
+               border:none;
 
           }
 
