--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
                margin: 1rem;
                padding: 1rem;
                color: white;
+               border: none;
           }
      </Style>
 
